--- a/systemd/agl-service-monitor.service
+++ b/systemd/agl-service-monitor.service
@@ -2,9 +2,14 @@
 Requires=kuksa-val.service
 After=kuksa-val.service
 
+[Timer]
+OnBootSec=1min
+
 [Service]
 Type=simple
+ExecStartPre=/usr/bin/sleep 30
 ExecStartPre=/usr/bin/python3 /usr/sbin/kuksa_viss_init_demo.py
+ExecStartPre=/usr/bin/sleep 60
 ExecStart=/usr/sbin/agl-service-monitor
 Restart=on-failure
 
